--- a/gaya.css
+++ b/gaya.css
@@ -1,5 +1,6 @@
 		/* Style the menu navigation bar */
 		.navbar {
+            margin: 0px;
 			overflow: hidden;
 			background-color: #333;
 			font-family: Arial, Helvetica, sans-serif;
