--- a/gaya.css
+++ b/gaya.css
@@ -1,83 +1,81 @@
-		/* Style the menu navigation bar */
-		.navbar {
-            margin: 0px;
-			overflow: hidden;
-			background-color: #333;
-			font-family: Arial, Helvetica, sans-serif;
-			display: flex;
-			align-items: center;
-		}
-
-		/* Style the logo */
-		.logo {
-			float: left;
-			padding: 14px 16px;
-			display: none;
-		}
-
-		/* Style the links inside the menu navigation bar */
-		.navbar a {
-			display: block;
-			color: white;
-			text-align: center;
-			padding: 14px 16px;
-			text-decoration: none;
-		}
-
-		/* Change the color of links on hover */
-		.navbar a:hover {
-			background-color: #ddd;
-			color: black;
-		}
-
-		/* Hamburger menu icon */
-		.icon {
-			display: none;
-			cursor: pointer;
-			float: right;
-			padding: 14px 16px;
-		}
-
-		/* Show logo and menu navigation links on desktop screens */
-		@media screen and (min-width: 768px) {
-			.logo {
-				display: block;
-			}
-			.navbar a {
-				display: inline-block;
-			}
-			.icon {
-				display: none;
-			}
-		}
-
-		/* Hide logo and menu navigation links on mobile screens */
-		@media screen and (max-width: 767px) {
-			.logo {
-				display: none;
-			}
-			.navbar a {
-				display: none;
-			}
-			.icon {
-				display: block;
-			}
-			.icon:hover {
-				background-color: #ddd;
-				color: black;
-			}
-			.navbar.responsive {
-				position: relative;
-			}
-			.navbar.responsive a.icon {
-				position: absolute;
-				right: 0;
-				top: 0;
-			}
-			.navbar.responsive a {
-				float: none;
-				display: block;
-				text-align: left;
-			}
-		}
-
+body {
+	font-family: sans-serif;
+	margin: 0;
+	padding: 0;
+  }
+  
+  header {
+	background-color: #333;
+	color: white;
+	padding: 10px;
+  }
+  
+  nav {
+	float: right;
+  }
+  
+  nav a {
+	display: block;
+	padding: 10px;
+	text-decoration: none;
+  }
+  
+  nav a:hover {
+	background-color: #444;
+  }
+  
+  #hamburger-menu {
+	position: absolute;
+	top: 0;
+	right: 0;
+	z-index: 99;
+	display: none;
+  }
+  
+  #hamburger-menu:hover {
+	display: block;
+  }
+  
+  #hamburger-menu i {
+	color: white;
+	font-size: 20px;
+	cursor: pointer;
+  }
+  
+  #hero {
+	background-color: #fff;
+	padding: 20px;
+  }
+  
+  #hero h1 {
+	font-size: 30px;
+  }
+  
+  #hero p {
+	font-size: 16px;
+  }
+  
+  #feature {
+	background-color: #f9f9f9;
+	padding: 20px;
+  }
+  
+  #feature h2 {
+	font-size: 20px;
+  }
+  
+  #feature p {
+	font-size: 16px;
+  }
+  
+  footer {
+	background-color: #333;
+	color: white;
+	padding: 10px;
+	text-align: center;
+  }
+  
+  footer a {
+	color: white;
+  }
+  
